kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supertest
  labels:
    name: supertest
